Fri Aug 21 09:00:41 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: Some more utility functions for colour
	  conversion, to let us get back from a bucket or from lab coords
	  to an rgb value for display.

Fri Aug 21 07:46:32 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update to get new packages.

Fri Aug 21 06:47:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour.py: import xapian-dependent stuff lazily, to make it
	  easier to use this module standalone.

Fri Aug 21 06:44:53 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Note that scipy 0.7 or later is needed.
	* xappy/colour.py,xappy/unittests/colour.py: Fix off-by-one
	  error for buckets at the top end of the range.

Wed Aug 19 11:06:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Apply untested patch for wildcards.

Mon Aug 17 23:44:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Update license of majority of code to MIT (but note that
	  it's still effectively GPL for now).

Mon Aug 17 18:13:02 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs,xappy/_checkxapian.py,
	  xappy/searchconnection.py,xappy/unittests/general1.py: Update for
	  new facet support interface in xapian (now in trunk).

Fri Aug 14 09:58:37 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update version numbers of
	  branchpoints.

Wed Aug 05 05:50:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* README: Mention where to get colormath from.

Wed Aug 05 05:40:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/colour_data.py: Fix not to use defaultdict.

Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix to work with FieldGroups again.
